--- a/src/Administration/Resources/app/administration/src/app/component/base/sw-modal/sw-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/base/sw-modal/sw-modal.html.twig
@@ -27,14 +27,24 @@
             >
                 <slot name="modal-header">
                     {% block sw_modal_slot_header %}
-                    {% block sw_modal_close %}
-                    <h4
-                        id="modalTitleEl"
-                        class="sw-modal__title"
-                    >
-                        {{ title }}
-                    </h4>
-                    {% endblock %}
+
+                    <div class="sw-modal__titles">
+                        {% block sw_modal_close %}
+                        <h4
+                            id="modalTitleEl"
+                            class="sw-modal__title"
+                        >
+                            {{ title }}
+                        </h4>
+                        {% endblock %}
+
+                        <h5
+                            v-if="subtitle"
+                            class="sw-modal__subtitle"
+                        >
+                            {{ subtitle }}
+                        </h5>
+                    </div>
 
                     {% block sw_modal_close_button %}
                     <button
