--- a/src/Administration/Resources/app/administration/src/app/component/base/sw-modal/sw-modal.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/base/sw-modal/sw-modal.scss
@@ -1,3 +1,4 @@
+@import "~scss/mixins";
 @import "~scss/variables";
 
 $sw-modal-color-backdrop: rgba(0, 0, 0, 0.4);
@@ -27,8 +28,10 @@ $sw-modal-transition-timing-function: cubic-bezier(0.68, -0.55, 0.26, 1.55);
     padding: 0 ($sw-modal-gap / 2);
 
     .sw-modal__dialog {
+        @include drop-shadow-default();
+
         background-color: $color-white;
-        border-radius: $border-radius-default;
+        border-radius: $border-radius-lg;
         color: $color-darkgray-200;
         max-height: calc(100vh - #{$sw-modal-gap});
         min-height: 200px;
@@ -85,20 +88,39 @@ $sw-modal-transition-timing-function: cubic-bezier(0.68, -0.55, 0.26, 1.55);
         justify-content: space-between;
         align-items: center;
         position: relative;
-        padding: 0 16px 0 32px;
-        height: 64px;
+        padding: 24px 16px 24px 32px;
+        min-height: 65px;
+    }
+
+    .sw-modal__titles {
+        max-width: 90%;
     }
 
     .sw-modal__title {
         margin: 0;
-        font-weight: normal;
-        font-size: $sw-modal-title-font-size;
+        color: $color-darkgray-300;
+        font-size: $font-size-large;
+        font-weight: $font-weight-semi-bold;
+        line-height: 18px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
+
+    .sw-modal__subtitle {
+        margin: 0;
+        color: $color-darkgray-50;
+        font-size: $font-size-small;
+        font-weight: $font-weight-regular;
+        line-height: 18px;
         white-space: nowrap;
         text-overflow: ellipsis;
         overflow: hidden;
     }
 
     .sw-modal__close {
+        position: absolute;
+        right: 24px;
         background: 0 none;
         color: $color-darkgray-100;
         cursor: pointer;
@@ -134,7 +156,7 @@ $sw-modal-transition-timing-function: cubic-bezier(0.68, -0.55, 0.26, 1.55);
     }
 
     .sw-modal__footer {
-        border-radius: 0 0 $border-radius-default $border-radius-default;
+        border-radius: 0 0 $border-radius-lg $border-radius-lg;
         background-color: $color-gray-100;
         display: grid;
         grid-auto-columns: min-content;
