NEXT-20851 - Disable admin extension UI via .env

--- a/src/Administration/Resources/views/administration/index.html.twig
+++ b/src/Administration/Resources/views/administration/index.html.twig
@@ -80,7 +80,8 @@
             features: window._features_,
             firstRunWizard: {{ firstRunWizard ? 'true' : 'false' }},
             systemCurrencyId: '{{ systemCurrencyId }}',
-            systemCurrencyISOCode: '{{ systemCurrencyISOCode }}'
+            systemCurrencyISOCode: '{{ systemCurrencyISOCode }}',
+            disableExtensions: '{{ disableExtensions }}'
         }
     });
 </script>
